HelloUltraviolet/Fixtures/RejectedSource/Expressions/LoopAsyncEnclosingReturn/Source/Main.uv
//! Rejected async iterator specimen for a non-async enclosing return type.

public procedure loopAsyncEnclosingReturnReference(stream: Stream<i32, !>) -> i32 {
    loop value in stream {
        let copied_value: i32 = value
    }
    return 0
}
